--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~3.1.3",
     "@expo/vector-icons": "^14.0.0",
+    "@react-native-async-storage/async-storage": "1.21.0",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
     "expo": "~50.0.14",
@@ -18,13 +20,12 @@
     "expo-updates": "~0.24.12",
     "firebase": "^10.11.0",
     "react": "18.2.0",
-    "react-native": "0.73.6",
-    "react-native-reanimated": "~3.6.2",
-    "@react-native-async-storage/async-storage": "1.21.0",
-    "react-native-gesture-handler": "~2.14.0",
-    "react-native-web": "~0.19.6",
     "react-dom": "18.2.0",
-    "@expo/metro-runtime": "~3.1.3"
+    "react-native": "0.73.6",
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-progress": "^5.0.1",
+    "react-native-reanimated": "~3.6.2",
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
