--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
     "expo": "~50.0.14",
+    "expo-constants": "^15.4.6",
     "expo-font": "~11.10.3",
     "expo-status-bar": "~1.11.1",
     "expo-updates": "~0.24.12",
@@ -25,10 +26,14 @@
     "react-native-gesture-handler": "~2.14.0",
     "react-native-progress": "^5.0.1",
     "react-native-reanimated": "~3.6.2",
-    "react-native-web": "~0.19.6"
+    "react-native-video": "^5.2.1",
+    "react-native-web": "~0.19.6",
+    "react-native-webview": "13.6.4",
+    "react-native-youtube-iframe": "^2.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@types/react-native-video": "^5.0.20"
   },
   "private": true
 }
