Gioco definition quasi finito manca solo verifica bottone cliccato rispetto alla parola giusta, stile in base al bottone cliccato e animazione bottone di fine, mancano gli ultimi 2 giochi dopo di questo

--- a/app.json
+++ b/app.json
@@ -17,7 +17,8 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "softwareKeyboardLayoutMode": "pan"
+      "softwareKeyboardLayoutMode": "pan",
+      "package": "com.mikexezy.education"
     },
     "web": {
       "favicon": "./assets/favicon.png"
