--- a/app.json
+++ b/app.json
@@ -13,6 +13,9 @@
       "supportsTablet": true
     },
     "android": {
+      "permissions": [
+        "VIBRATE"
+      ],
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
